mkdocs.yml - table of content updates

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,11 +12,13 @@ pages:
 - [add-git-path.md, Adding GIT DIRECTORY TO Windows PATH]
 - [gitgui.md, GUI Tools For GIT]
 - [initaddcommit.md, Getting Started]
-- [initaddcommit_ex_1.md, Getting Started Exercise 1.1]
-- [initaddcommit_rev.md, Init add commit Revisit]
-- [statuslog.md, Status & Log ]
+- [initaddcommit_ex_1.md, Exercise on Getting Started]
+- [statuslog.md, Status & Log]
 - [statuslog_ex_1.md, Exercise on Status & Log]
 - [checkoutrevertreset.md, Undoing Changes Safely!]
-- [getstarted_ex_1.2.md, Exercise 1.2]
+- [checkoutrevertreset_ex_1.md, Exercise on Undoing Changes Safely!]
+- [branch.md, Branching Merging]
+- [workflows.md, Git Workflows]
+- [featureflow.md, Feature Development]
 - [ref.md, References]
 - [todo.md, Todo]
